--- a/benchmark/benchmark.html
+++ b/benchmark/benchmark.html
@@ -58,7 +58,7 @@ var ecc_sign = {
 	run : function (rounds) {
 	  this.genKeys(rounds);
 	  this.sign(rounds);
-	  this.verify(rounds);
+	  //this.verify(rounds);
 	}
   },
   sm2 : {
@@ -98,7 +98,7 @@ var ecc_sign = {
 	run : function (rounds) {
 	  this.genKeys(rounds);
 	  this.sign(rounds);
-	  this.verify(rounds);
+	  //this.verify(rounds);
 	}
   },
   run : function (rounds = 10000) {
@@ -172,14 +172,14 @@ var enc = {
 	console.log("sm4 decryption : "+Math.floor(128*rounds/t)+" b/ms");
   },
   run : function(rounds = 10000) {
-    this.aes(rounds);
+    //this.aes(rounds);
 	this.sm4(rounds);
   }
 }
 
 
-ecc_sign.run(100);
-//hash.run();
+//ecc_sign.run(100);
+hash.run();
 //enc.run();
 
 </script>
