--- a/demo/test.html
+++ b/demo/test.html
@@ -2,12 +2,24 @@
 <script>
 
 /* dump a bitArray */
-function dump (a, base=16){
+function dump(a, base=16){
   var str = '';
   for (var i=0; i<a.length; i++)
     str = str.concat((a[i]<0 ? a[i]+0x100000000 : a[i]).toString(16)+' ');
   console.log(str);
 }
+
+
+function puts(tag, a)
+{
+    var list = [];
+	for (var i=0; i<a.length; i++)
+	    list += ((a[i]+0x100000000) % 0x100000000).toString(16)+' ';
+	console.log(tag+'('+a.length+'):'+list);
+}
+
+console.log("****************** SM2 *******************");
+console.log("************ Gen Key *************");
 
 var sm2 = sjcl.ecc.curves['sm2'];
 
@@ -17,7 +29,7 @@ console.log("pk: "+key.pub.serialize().point);
 console.log("sk: "+key.sec.serialize().exponent);
 var sk = new sjcl.bn(key.sec.serialize().exponent, 16);
 var pk = sm2.G.mult(sk);
-console.log('pk\':'+pk.x.toString(16)+' '+pk.y.toString(16));
+console.log('pk.x: '+pk.x.toString(16)+'\npk.y: '+pk.y.toString(16));
 
 /*
 var s = new sjcl.bn(2, 16).power(64);
@@ -79,17 +91,51 @@ var key = {
   sec: new sjcl.ecc['sm2'].secretKey(curve, new sjcl.bn("89B6F3E3000590059FAB428BC6A090126CB86C6E2A07467D47E37D3BA3155F74"))
 }
 */
+console.log("************ Sign *************");
+var msg = "1234";
+console.log("Message : " + msg);
 
-var sig = key.sec.sign("1234");
+var sig = key.sec.sign(msg);
+console.log("Signature : ");
 dump(sig);
-var v = key.pub.verify("1234", sig);
+
+var v = key.pub.verify(msg, sig);
 console.log("Signature verify : "+v);
 
-var ct = key.pub.encrypt("1234");
+console.log("************ Encryption *************");
+console.log("Plaintext : " + msg);
+var ct = key.pub.encrypt(msg);
 console.log("Ciphertext : ");
 dump(ct);
 var pt = key.sec.decrypt(ct);
+console.log("Plaintext(ASCII) : ");
+dump(pt);
+
+
+console.log("****************** SM3 *******************");
+msg = '12345678123456781234567812345678123456781234567812345678123456789';
+console.log("Message : "+msg);
+
+hash = sjcl.hash.sm3.hash(msg);
+puts('sm3', hash);
+//hash = sjcl.hash.sha256(msg);
+//dump('sha256 : ', hash);
+
+
+console.log("****************** SM4 *******************");
+
+var pt = sjcl.codec.bytes.toBits([0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15]);
+var key = sjcl.codec.bytes.toBits([15,14,13,12,11,10,9,8,7,6,5,4,3,2,1,0]);
+
+sm4 = new sjcl.cipher.sm4(key);
+ct = sm4.encrypt(pt, key);
+console.log("Ciphertext : ");
+dump(ct);
+
+pt = sm4.decrypt(ct, key);
+
 console.log("Plaintext : ");
 dump(pt);
+
 
 </script>
