--- a/benchmark/test.html
+++ b/benchmark/test.html
@@ -52,6 +52,7 @@ var pt = sjcl.codec.bytes.toBits([0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15]);
 var key = sjcl.codec.bytes.toBits([15,14,13,12,11,10,9,8,7,6,5,4,3,2,1,0]);
 var aes_enc = new sjcl.cipher.aes(key);
 var sm4_enc = new sjcl.cipher.sm4(key);
+var sm4_tenc = new sjcl.cipher.sm4_t(key);
 
 var enc = {
   //var rounds = 10000;
@@ -60,10 +61,13 @@ var enc = {
   },
   sm4 : function(){
     return sm4_enc.encrypt(key.clone(), pt.clone());
+  },
+  sm4_t : function(){
+    return sm4_tenc.encrypt(key.clone(), pt.clone());
   }
 }
 
-symenc_suite.add('aes', enc.aes).add('sm4', enc.sm4)
+symenc_suite.add('aes', enc.aes).add('sm4', enc.sm4).add('sm4_t_table', enc.sm4_t)
 .on('cycle', function(event) {
   console.log(String(event.target));
 })
